src/main/resources/static/style.css
body {
    --accent-color: #168a16;
    --accent-color-light-1: color-mix(in oklab, var(--accent-color), white 10%);
    --background-color: #ffffff;
    --footer-color: color-mix(in oklab, var(--background-color), black 10%);
    --text-color: #000000;
    --nav-text-color: #ffffff;

    font-family: sans-serif;
    background-color: var(--background-color);
}

.main-header {
    background-color: var(--accent-color);
    color: var(--nav-text-color);
}

.primary-nav {
    display: flex;
    justify-content: center;

    > a {
        padding: 1rem;
        color: var(--nav-text-color);
        text-decoration: none;

        &:hover, &:focus-visible {
            background-color: var(--accent-color-light-1);
            outline: none;
        }
    }
}

.content-wrapper {
    max-width: 1000px;
    margin-inline: auto;
}

.main-footer {
    background-color: var(--footer-color);
    margin-top: 2rem;
    padding-block: 1rem;
}

.url-output {
    border: thin solid black;
    word-break: break-all;
    max-height: 10em;
    overflow: auto;
}

.cool-button {
    background-color: var(--accent-color);
    color: var(--nav-text-color);
    border: none;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    transition: background-color 0.3s, transform 0.3s;
    border-radius: 5px;
}

.cool-button:hover {
    background-color: var(--accent-color-light-1);
    transform: scale(1.1);
}

.cool-button:active {
    transform: scale(0.9);
}

#ville-content {
    font-size: 24px;
    color: var(--text-color);
    margin-bottom: 20px;
}

